--- a/demos/tips_success.html
+++ b/demos/tips_success.html
@@ -20,7 +20,7 @@
 			new ConfirmDialog({
 				text : "我是很多字",
 				callback : function () {
-					alert(1);
+					alert("我是回调函数");
 				}
 			})
 		})	
