--- a/demos/miya_confirm.html
+++ b/demos/miya_confirm.html
@@ -17,8 +17,9 @@
 </body>
 <script type="text/javascript">
 	$("#confirm").click(function() {
-			new ConfirmDialog({
+			$.Confirm({
 				text : "我是很多字",
+				textColor : "red",
 				callback : function () {
 					alert("我是回调函数");
 				}
