--- a/demos/miya_success.html
+++ b/demos/miya_success.html
@@ -17,11 +17,10 @@
 </body>
 <script type="text/javascript">
 	$("#confirm").click(function() {
-			new ConfirmDialog({
+			$.Tips({
 				text : "我是很多字",
-				callback : function () {
-					alert("我是回调函数");
-				}
+				type : "error",
+				imageUrl : "../assets/ada.jpg"
 			})
 		})	
 </script>
