--- a/demos/miya_success.html
+++ b/demos/miya_success.html
@@ -13,7 +13,7 @@
     <script src="../assets/miyazono.js"></script>
 </head>
 <body>
-	<botton id="confirm">确认弹出</botton>
+	<button id="confirm">确认弹出</button>
 </body>
 <script type="text/javascript">
 	$("#confirm").click(function() {
