--- a/demos/miya_success.html
+++ b/demos/miya_success.html
@@ -20,7 +20,7 @@
 			$.Tips({
 				text : "我是很多字",
 				type : "error",
-				imageUrl : "../assets/ada.jpg"
+				imageUrl : "../assets/error.png"
 			})
 		})	
 </script>
