--- a/demos/miya_success.html
+++ b/demos/miya_success.html
@@ -19,8 +19,8 @@
 	$("#confirm").click(function() {
 			$.Tips({
 				text : "我是很多字",
-				type : "error",
-				imageUrl : "../assets/error.png"
+				type : "success",
+				imageUrl : "../assets/success.png"
 			})
 		})	
 </script>
