--- a/demos/tip.html
+++ b/demos/tip.html
@@ -19,6 +19,7 @@
     $('#tip').click(function() {
         $.tip({
             text : '我是很多字',
+            type : 'error',
             imageUrl : '../assets/success.png'
         })
     });
