--- a/demos/confirm.html
+++ b/demos/confirm.html
@@ -10,17 +10,17 @@
     <title>tip demo</title>
 
     <script src="../assets/jquery171.js"></script>
-    <script src="../assets/tip.js"></script>
+    <script src="../assets/confirm.js"></script>
 </head>
 <body>
-    <button id="tip">提示框</button>
+    <button id="confirm">确认框</button>
 </body>
 <script type="text/javascript">
-    $('#tip').click(function() {
-        $.Tip({
-            text : '我是很多字',
-            type : 'error',
-            imageUrl : '../assets/success.png'
+    $('#confirm').click(function() {
+        $.Confirm({
+            callback : function () {
+                alert("1");
+            }
         })
     });
 </script>
