--- a/demos/confirm.html
+++ b/demos/confirm.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="360-site-verification" content="77e88fa96898c4e0de55c512d98cf44d">
-    <title>tip demo</title>
+    <title>confirm demo</title>
 
     <script src="../assets/jquery171.js"></script>
     <script src="../assets/confirm.js"></script>
