--- a/demos/miya_tips.html
+++ b/demos/miya_tips.html
@@ -7,9 +7,8 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <title>确认弹出窗提示demo</title>
-
-    <script src="../assets/jquery171.js"></script>
-    <script src="../assets/miyazono.js"></script>
+    <script src="../src/jquery171.js"></script>
+    <script src="../dist/bundle.js"></script>
 </head>
 <body>
 	<button id="success">成功窗口</button>
@@ -20,14 +19,14 @@
         $.Tips({
             text : "我是很多字",
             type : "success",
-            imageUrl : "../assets/success.png"
+            imageUrl : "../src/img/success.png"
         })
     })
     $("#error").click(function() {
         $.Tips({
             text : "我是很多字",
             type : "error",
-            imageUrl : "../assets/error.png"
+            imageUrl : "../src/img/error.png"
         })
     })
 </script>
