--- a/demos/miya_pagebar.html
+++ b/demos/miya_pagebar.html
@@ -7,9 +7,8 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <title>确认弹出窗提示demo</title>
-
-    <script src="../assets/jquery171.js"></script>
-    <script src="../assets/miyazono.js"></script>
+    <script src="../src/jquery171.js"></script>
+    <script src="../dist/bundle.js"></script>
 </head>
 <body>
     <div class="page-bar" data-total="5" data-current="2"></div>
