gulp struct init

--- a/demos/miya_tips.html
+++ b/demos/miya_tips.html
@@ -6,7 +6,7 @@
     <meta name="renderer" content="webkit">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <title>确认弹出窗提示demo</title>
+    <title>提示窗demo</title>
     <script src="../lib/jquery171.js"></script>
     <script src="../dist/miyazono.js"></script>
 </head>
