--- a/demos/miya_tips.html
+++ b/demos/miya_tips.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <title>提示窗demo</title>
     <script src="../lib/jquery171.js"></script>
-    <script src="../dist/miyazono.js"></script>
+    <script src="../dist/miyazono.min.js"></script>
 </head>
 <body>
 	<button id="success">成功窗口</button>
