--- a/demos/miya_confirm.html
+++ b/demos/miya_confirm.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <title>确认弹出窗提示demo</title>
     <script src="../lib/jquery171.js"></script>
-    <script src="../dist/miyazono.js"></script>
+    <script src="../dist/miyazono.min.js"></script>
 </head>
 <body>
 	<button id="confirm">确认弹出</button>
